# dalle-tiny

./: 1_extract_laion_landscapes.ipynb  1_extract_mscoco_landscapes.ipynb  2_download_dataset_images.ipynb  3_encoding_image_with_dvae.ipynb  3_encoding_image_with_vqgan.ipynb  3_encoding_image_with_vqgan_all_mscoco.ipynb  4_prepare_dataset.ipynb  4_prepare_dataset_all_mscoco.ipynb  README.md  archive_dvae_val.parquet  archive_train.parquet  archive_val.parquet  download_dataset_images.ipynb  encoding_image_with_vqgan.ipynb  extract_mscoco_landscapes.ipynb  requirements.txt  setup.cfg  train.csv  train_caption_encoding.parquet  val_caption_encoding.parquet  validation.csv
demo/: 1_encoding_image_with_vqgan.ipynb  2_parquet_grooming.ipynb  3_encoding_image_with_vqgan.ipynb  3_preprocess_name.ipynb  4_train_my_pokemon.ipynb  5_inference_my_new_pokemon.ipynb
src/dalle_tiny/model/: __init__.py  tiny_dalle_model.py
src/dalle_tiny/util/: __init__.py  tiny_dalle_dataset.py
tools/inference/: inference.ipynb
tools/train/: collaborative_train.ipynb  train.csv  train.ipynb  train.py
util/: tiny_dalle_dataset.py
