[metadata]
name = dalle-tiny
version = attr: dalle_tiny.__version__
author = cthiounn
author_email = cthiounn@yopmail.com
description = DALL·E tiny - Generate images from a text prompt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cthiounn/dalle-tiny
project_urls =
    Bug Tracker = https://github.com/cthiounn/dalle-tiny/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Development Status :: 3 - Alpha
    Intended Audience :: Developers


[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    transformers
    dall_e
    pandas
    requests
    numpy

[options.packages.find]
where=src
